<resources>
    <string name="app_name">卓越书店</string>
    <string name="book_city">书城</string>
    <string name="book_self">书架</string>
    <string name="book_idea">想法</string>
    <string name="book_my">我的</string>
    <string name="login_name">登录</string>
    <string name="register_name">注册</string>
    <string name="shopping_cart">卓购物</string>
    <string name="member">卓会员</string>
    <string name="waller">卓钱包</string>
    <string name="my_planning">我的订单</string>
    <string name="name_not_exist">用户不存在</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_select">全选</string>
    <string name="all_un_select">全不选</string>
    <string name="delete">删除</string>
    <string name="import_shelf">导入书架</string>
    <string name="scan">立即扫描</string>
    <string name="str_pre_chapter">上一章</string>
    <string name="str_next_chapter">下一章</string>
    <string name="str_default">默认</string>

    <!-- 自定义属性值 -->
    <string name="round">round</string>
    <string name="circle">circle</string>
</resources>
