<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/icon_setting" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rl_top"
        android:layout_marginTop="2dp"
        android:background="#CFCFCF"></View>

    <RelativeLayout
        android:id="@+id/rl_topCenter"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/rl_top">

        <ImageView
            android:id="@+id/iv_loginView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:src="@drawable/icon_login_view" />

        <TextView
            android:id="@+id/tv_showName"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@+id/iv_loginView"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/login_name" />

    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/rl_topCenter"
        android:layout_marginTop="2dp"
        android:background="#CFCFCF"></View>

    <LinearLayout
        android:id="@+id/Layout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/rl_shopping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_shoppingCart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_shopping_cart" />

            <TextView
                android:id="@+id/tv_shoppingCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_shoppingCart"
                android:text="@string/shopping_cart" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_member"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_member"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_member" />

            <TextView
                android:id="@+id/tv_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_member"
                android:text="@string/member" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_wallet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_wallet"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_wallet" />

            <TextView
                android:id="@+id/tv_wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_wallet"
                android:text="@string/waller" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="400dp"
        android:layout_height="1dp"
        android:layout_below="@id/Layout02"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:background="#cdcdcd"></View>

    <TextView
        android:id="@+id/tv_myplan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="3dp"
        android:text="@string/my_planning"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/Layout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_myplan"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:id="@+id/rl_pending_payment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_pending_payment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_pending_payment" />

            <TextView
                android:id="@+id/tv_pending_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_pending_payment"
                android:text="待付款" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_pending_delivery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_pending_delivery"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_pending_delivery" />

            <TextView
                android:id="@+id/tv_pending_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_pending_delivery"
                android:text="待发货" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_pending_received"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_pending_received"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_pending_received" />

            <TextView
                android:id="@+id/tv_pending_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_pending_received"
                android:text="待收货" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_pending_evaluater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_pending_evaluater"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/icon_pending_evaluated" />

            <TextView
                android:id="@+id/tv_pending_evaluater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_pending_evaluater"
                android:text="待评价" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/Layout03"
        android:background="#CFCFCF"></View>

    <LinearLayout
        android:id="@+id/llFollow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/view4"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8sp"
            android:paddingBottom="5dp"
            android:src="@drawable/icon_follow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:paddingTop="5sp"
            android:text="关注"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/llFollow"
        android:background="#CFCFCF"></View>

    <LinearLayout
        android:id="@+id/llNote"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/view5"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8sp"
            android:paddingBottom="5dp"
            android:src="@drawable/icon_note" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:paddingTop="5sp"
            android:text="笔记"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/llNote"
        android:background="#CFCFCF"></View>

    <LinearLayout
        android:id="@+id/llBookList"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/view6"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_bookList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8sp"
            android:paddingBottom="5dp"
            android:src="@drawable/icon_book_list" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:paddingTop="5sp"
            android:text="书单"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/llBookList"
        android:background="#CFCFCF"></View>

    <LinearLayout
        android:id="@+id/llCustomer"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/view7"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8sp"
            android:paddingBottom="5dp"
            android:src="@drawable/icon_customer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:paddingTop="5sp"
            android:text="客服"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llCustomer"
        android:background="#CFCFCF"></View>

</RelativeLayout>